@@ -131,10 +131,16 @@
 <div class="highlight"><pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">upbit.websocket</span> <span class="kn">import</span> <span class="n">UpbitWebSocket</span>
 
 <span class="n">sock</span> <span class="o">=</span> <span class="n">UpbitWebSocket</span><span class="p">()</span>
+<span class="k">print</span><span class="p">(</span><span class="n">sock</span><span class="p">)</span>
 
 <span class="k">async</span> <span class="k">with</span> <span class="n">sock</span> <span class="k">as</span> <span class="n">conn</span><span class="p">:</span>
     <span class="c1"># Do something
 </span>    <span class="k">pass</span>
+</code></pre></div>
+<blockquote>
+<p>Result Example</p>
+</blockquote>
+<div class="highlight"><pre class="highlight python tab-python"><code><span class="n">UpbitWebSocket</span><span class="p">(</span><span class="n">wss</span><span class="p">:</span><span class="o">//</span><span class="n">api</span><span class="p">.</span><span class="n">upbit</span><span class="p">.</span><span class="n">com</span><span class="o">/</span><span class="n">websocket</span><span class="o">/</span><span class="n">v1</span><span class="p">)</span>
 </code></pre></div><h3 id='upbitwebsocket-uri-websocket_uri-ping_interval-none-ping_timeout-none'>UpbitWebSocket(uri=WEBSOCKET_URI, ping_interval=None, ping_timeout=None)</h3>
 <table><thead>
 <tr>
@@ -173,7 +179,44 @@
 <span class="k">async</span> <span class="k">with</span> <span class="n">connection</span> <span class="k">as</span> <span class="n">conn</span><span class="p">:</span>
     <span class="c1"># Do Something
 </span>    <span class="k">pass</span>
-</code></pre></div><h2 id='conn-send'>conn.send</h2>
+</code></pre></div><h2 id='socket-connect'>socket.connect</h2>
+<p><strong>Method</strong></p>
+
+<p>URI에 연결을 시도하고 Connection 객체를 재생성합니다.</p>
+
+<p><code>UpbitWebSocket</code> 클래스의 <code>__init__</code> 메소드 호출 시 자동으로 호출됩니다.</p>
+
+<blockquote>
+<p>Example Code</p>
+</blockquote>
+<div class="highlight"><pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">upbit.websocket</span> <span class="kn">import</span> <span class="n">UpbitWebSocket</span>
+
+<span class="n">sock</span> <span class="o">=</span> <span class="n">UpbitWebSocket</span><span class="p">()</span>
+<span class="n">sock</span><span class="p">.</span><span class="n">connect</span><span class="p">(</span>
+    <span class="n">ping_interval</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span>
+    <span class="n">ping_timeout</span><span class="o">=</span><span class="mi">20</span>
+<span class="p">)</span>
+
+<span class="k">async</span> <span class="k">with</span> <span class="n">sock</span> <span class="k">as</span> <span class="n">conn</span><span class="p">:</span>
+    <span class="c1"># Do Something
+</span>    <span class="k">pass</span>
+</code></pre></div><h3 id='socket-connect-ping_interval-none-ping_timeout-none'>socket.connect(ping_interval=None, ping_timeout=None)</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>ping_interval</td>
+<td>ping 간격 제한 (기본값: <code>None</code>)</td>
+</tr>
+<tr>
+<td>ping_timeout</td>
+<td>ping 시간 초과 제한 (기본값: <code>None</code>)</td>
+</tr>
+</tbody></table>
+<h2 id='conn-send'>conn.send</h2>
 <p>웹 소켓에 데이터를 수신합니다.</p>
 
 <blockquote>
@@ -199,6 +242,13 @@
 </tbody></table>
 <h2 id='conn-recv'>conn.recv</h2>
 <p>서버로부터 전달받은 바이트 스트림(bytes stream) 데이터를 받습니다.</p>
+
+<p>예외를 발생시키는 경우는 아래와 같습니다.</p>
+
+<ul>
+<li>ConnectionClosed: <code>Connection</code> 객체가 <code>Close</code> 상태가 되었을 경우</li>
+<li>RuntimeError: 두 가지 코루틴이 동시에 <code>recv</code> 를 호출하는 경우</li>
+</ul>
 
 <blockquote>
 <p>Example Code</p>
@@ -237,6 +287,7 @@
 <div class="highlight"><pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">upbit.websocket</span> <span class="kn">import</span> <span class="n">UpbitWebSocket</span>
 
 <span class="n">currencies</span> <span class="o">=</span> <span class="p">[</span><span class="s">'KRW-BTC'</span><span class="p">,</span> <span class="s">'KRW-ETH'</span><span class="p">]</span>
+
 <span class="n">type_field</span> <span class="o">=</span> <span class="n">UpbitWebSocket</span><span class="p">.</span><span class="n">generate_type_field</span><span class="p">(</span>
     <span class="nb">type</span><span class="o">=</span><span class="s">"trade"</span><span class="p">,</span>
     <span class="n">codes</span><span class="o">=</span><span class="n">currencies</span>
@@ -288,9 +339,10 @@
 
 <span class="n">currencies</span> <span class="o">=</span> <span class="p">[</span><span class="s">'KRW-BTC'</span><span class="p">,</span> <span class="s">'KRW-ETH'</span><span class="p">]</span>
 <span class="n">counts</span> <span class="o">=</span> <span class="p">[</span><span class="mi">5</span><span class="p">,</span> <span class="mi">5</span><span class="p">]</span>
+
 <span class="n">codes</span> <span class="o">=</span> <span class="n">UpbitWebSocket</span><span class="p">.</span><span class="n">generate_orderbook_codes</span><span class="p">(</span>
-    <span class="n">currencies</span><span class="p">,</span>
-    <span class="n">counts</span>
+    <span class="n">currencies</span><span class="o">=</span><span class="n">currencies</span><span class="p">,</span>
+    <span class="n">counts</span><span class="o">=</span><span class="n">counts</span>
 <span class="p">)</span>
 <span class="k">print</span><span class="p">(</span><span class="n">codes</span><span class="p">)</span>
 </code></pre></div>
@@ -315,8 +367,9 @@
 </tr>
 </tbody></table>
 <h2 id='upbitwebsocket-generate_payload-payload-generate'>UpbitWebSocket.generate_payload (Payload Generate)</h2>
-<p><strong>staticmethod</strong>
-웹 소켓 수신에 필요한 payload 데이터를 json 포맷 형식의 문자열로 generate 합니다.</p>
+<p><strong>staticmethod</strong></p>
+
+<p>웹 소켓 수신에 필요한 payload 데이터를 json 포맷 형식의 문자열로 generate 합니다.</p>
 
 <blockquote>
 <p>Example Code</p>
